# goit-pythonweb-hw-12

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 30dcf31f960c_add_user.py  6d9cf86f7005_add_user.py  98dd4bb79766_add_to_model_user_filed_confirmed.py  c37d42057ae4_init.py  f1c256913a9e_remove_role_column_from_users_table.py
src/: schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py
